--- a/source/form.html
+++ b/source/form.html
@@ -6,133 +6,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Кэт энерджи - форма заказа</title>
-
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <header class="page-header">
       <!-- Содержимое page-header будет вставлено после отработки на index.html -->
     </header>
+    <main class="form-main wrapper">
+      <!-- TODO убрать лишние классы формы -->
+      <form class="customer-form form" action="https://echo.htmlacademy.ru" method="post">
+        <h1 class="form__title">Подбор программы</h1>
+        <p class="form__proposal">Заполните анкету и мы подберем программу</p>
+        <fieldset class="form__fieldset">
+          <ul class="form__list">
+            <li class="form__item">
+              <label class="form__field" for="cat-name"><span>Имя:*</span></label>
+              <input class="form__input" type="text" name="cat-name" id="cat-name" placeholder="БАРСИК" required>
+            </li>
 
-    <main class="page-main inner-page">
-      <div class="page-main__wrapper">
+            <li class="form__item">
+              <label class="form__field" for="cat-weight"><span>Вес (кг):*</span></label>
+              <input class="form__input" type="text" name="cat-weight" id="cat-weight" placeholder="7" required>
+            </li>
 
-        <h1 class="page-main__title">Подбор программы</h1>
+            <li class="form__item">
+              <label class="form__field" for="cat-age"><span>Возраст (лет):</span></label>
+              <input class="form__input" type="text" name="cat-age" id="cat-age" placeholder="7">
+            </li>
+          </ul>
+        </fieldset>
 
-        <form class="customer-form" action="https://echo.htmlacademy.ru"
-              method="post">
-          <p class="customer-form__title">Заполните анкету и мы подберем
-            программу</p>
+        <fieldset class="form__fieldset">
+          <ul class="form__list">
+            <li class="form__item">
+              <input class="form__input" type="radio" name="cat-program" value="cat-grace" id="cat-grace">
+              <label class="form__field" for="cat-grace"><span>Похудение</span></label>
+            </li>
 
-          <fieldset class="customer-form__personal-data personal-data">
-            <ul class="personal-data__list">
-              <li class="personal-data__item">
-                <label for="cat-name"><span>Имя:*</span></label>
-                <input type="text" name="cat-name" id="cat-name"
-                       placeholder="БАРСИК" required>
-              </li>
+            <li class="form__item">
+              <input class="form__input" type="radio" name="cat-program" value="cat-power" id="cat-power">
+              <label class="form__field" for="cat-power"><span>Набор массы</span>
+              </label>
+            </li>
 
-              <li class="personal-data__item">
-                <label for="cat-weight"><span>Вес (кг):*</span></label>
-                <input type="text" name="cat-weight" id="cat-weight"
-                       placeholder="7" required>
-              </li>
+            <li class="form__item">
+              <input class="form__input" type="radio" name="cat-program" value="cat-advice" id="cat-advice">
+              <label class="form__field" for="cat-advice"><span>Не знаю (Нужен ваш
+                  совет)</span></label>
+            </li>
+          </ul>
+        </fieldset>
 
-              <li class="personal-data__item">
-                <label for="cat-age"><span>Возраст (лет):</span></label>
-                <input type="text" name="cat-age" id="cat-age" placeholder="7">
-              </li>
-            </ul>
-          </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__section-title">
+            <span>Контактные данные (владельца кота)</span>
+          </legend>
+          <ul class="form__list">
+            <li class="form__item">
+              <label class="form__field form__field--icon-email" for="customer-email"><span>E-mail:*</span></label>
+              <input class="form__input" type="email" name="customer-email" id="customer-email" placeholder="KUKLACHEV@GMAIL.COM" required>
+            </li>
+            <li class="form__item">
+              <label class="form__field form__field--icon-phone" for="customer-phone"><span>Телефон:*</span></label>
+              <input class="form__input" type="tel" name="customer-phone" id="customer-phone" placeholder="8 (960) 900-60-90" required>
+            </li>
+          </ul>
+        </fieldset>
 
-          <fieldset class="customer-form__personal-program personal-program">
-            <ul class="personal-program__list">
-              <li class="personal-program__item">
-                <input type="radio" name="cat-program" value="cat-grace"
-                       id="cat-grace">
-                <label for="cat-grace"><span>Похудение</span></label>
-              </li>
+        <fieldset class="form__fieldset">
+          <legend class="form__section-title">
+            <span>Комментарий</span>
+          </legend>
+          <!-- <p> -->
+          <textarea class="form__response" name="cat-description" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
+          <!-- <textarea class="form__response" name="cat-description" placeholder="   РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА" rows="10" cols="30"></textarea> -->
+          <!-- </!-->
+        </fieldset>
 
-              <li class="personal-program__item">
-                <input type="radio" name="cat-program" value="cat-power"
-                       id="cat-power">
-                <label for="cat-power"><span>Набор массы</span>
-                </label>
-              </li>
+        <fieldset class="form__fieldset">
+          <legend class="form__section-title">
+            <span>Дополнительно</span>
+          </legend>
+          <ul class="form__list">
+            <li class="form__item food-item">
+              <input class="form__input" type="checkbox" name="food-item-1" value="sweetener" id="food-item-1" checked>
+              <label class="form__field" for="food-item-1"><span>Сахарозаменитель</span></label>
+            </li>
+            <li class="form__item food-item">
+              <input class="form__input" type="checkbox" name="food-item-2" value="aqua" id="food-item-2">
+              <label class="form__field" for="food-item-2"><span>Питьевая вода</span></label>
+            </li>
+            <li class="form__item food-item">
+              <input class="form__input" type="checkbox" name="food-item-3" value="milk" id="food-item-3">
+              <label class="form__field" for="food-item-3"><span>Молоко</span></label>
+            </li>
+            <li class="form__item food-item">
+              <input class="form__input" type="checkbox" name="food-item-4" value="vitamins" id="food-item-4">
+              <label class="form__field" for="food-item-4"><span>Витамины</span></label>
+            </li>
+          </ul>
+        </fieldset>
+        <p><button class="form__button button" type="submit">Отправить заявку</button></p>
 
-              <li class="personal-program__item">
-                <input type="radio" name="cat-program" value="cat-advice"
-                       id="cat-advice">
-                <label for="cat-advice"><span>Не знаю (Нужен ваш
-                    совет)</span></label>
-              </li>
-            </ul>
-
-          </fieldset>
-
-          <fieldset class="customer-form__personal-contacts personal-contacts">
-            <legend>
-              <span>Контактные данные (владельца кота)</span>
-            </legend>
-            <ul class="personal-contacts__list">
-              <li class="personal-contacts__item">
-                <label for="customer-email"><span>E-mail:*</span></label>
-                <input type="text" name="customer-email" id="customer-email"
-                       placeholder="kuklachev@gmail.com" required>
-              </li>
-              <li class="personal-contacts__item">
-                <label for="customer-phone"><span>Телефон:*</span></label>
-                <input type="text" name="customer-phone" id="customer-phone"
-                       placeholder="8 (960) 900-60-90" required>
-              </li>
-            </ul>
-          </fieldset>
-
-          <fieldset class="customer-form__personal-comment personal-comment">
-            <legend>
-              <span>Комментарий</span>
-            </legend>
-            <!-- <p> -->
-            <textarea name="cat-description"
-                      placeholder="   РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА"
-                      rows="10" cols="40"></textarea>
-            <!-- </p> -->
-          </fieldset>
-
-          <fieldset
-                    class="customer-form__additional-product additional-product">
-            <legend>
-              <span>Дополнительно</span>
-            </legend>
-            <ul class="additional-product__list">
-              <li class="additional-product__item food-item">
-                <input type="checkbox" name="food-item-1" value="sweetener"
-                       id="food-item-1" checked>
-                <label for="food-item-1"><span>Сахарозаменитель</span></label>
-              </li>
-              <li class="additional-product__item food-item">
-                <input type="checkbox" name="food-item-2" value="aqua"
-                       id="food-item-2">
-                <label for="food-item-2"><span>Питьевая вода</span></label>
-              </li>
-              <li class="additional-product__item food-item">
-                <input type="checkbox" name="food-item-3" value="milk"
-                       id="food-item-3">
-                <label for="food-item-3"><span>Молоко</span></label>
-              </li>
-              <li class="additional-product__item food-item">
-                <input type="checkbox" name="food-item-4" value="vitamins"
-                       id="food-item-4">
-                <label for="food-item-4"><span>Витамины</span></label>
-              </li>
-            </ul>
-          </fieldset>
-          <p><button class="customer-form__button button"
-                    type="submit">Отправить заявку</button></p>
-
-          <p class="customer-form__notice">* — Обязательные поля</p>
-        </form>
-      </div>
+        <p class="form__notice">* — Обязательные поля</p>
+      </form>
     </main>
 
     <footer class="page-footer">
