--- a/source/index.html
+++ b/source/index.html
@@ -6,112 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Кэт энерджи</title>
-
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <header class="page-header">
-      <div class="page-header__wrapper">
-
-        <a class="page-header__link logo-link" href="#">
-          <img class="logo-link__image" src="blocks/logo/img/logo_mobile.svg"
-               alt="КЭТ ЭНЕРДЖИ" width="33" height="38">
-        </a>
-
-        <a class="page-header__brand brand-link" href="#">
-          <img class="brand-link__image"
-               src="blocks/logo/img/logo_mobile_header.svg"
-               alt="Интернет-магазин фитнес еды для котиков" width="101"
-               height="18">
-        </a>
-
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">открыть меню</button>
-          <!-- <img src="blocks/main-nav/img/mobile_menu.svg"
-             alt="Открыть меню сайта" width="24" height="18">
-        <img src="blocks/main-nav/img/mobile_menu_close.svg"
-             alt="Закрыть меню сайта" width="18" height="18"> -->
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item  site-list__item--active">
-                <!-- <a href="index.html">главная</a> -->
-                <a href="#">главная</a>
-              </li>
-              <li class="site-list__item">
-                <a href="catalog.html">каталог продукции</a>
-                <!-- <a>каталог продукции</a> -->
-              </li>
-              <li class="site-list__item">
-                <a href="form.html">подбор программы</a>
-                <!-- <a>подбор программы</a> -->
-              </li>
-            </ul>
-          </div>
-        </nav>
-
-      </div>
+    <header class="page-header wrapper">
+      <a class="page-header__link logo-link" href="#">
+        <img class="logo-link__image" src="img/logo-mobile.svg" alt="КЭТ ЭНЕРДЖИ" width="192" height="39">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"> </button>
+        <!-- alt="Открыть меню сайта" width="24" height="18" -->
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list nav-list">
+            <li class="nav-list__item nav-list__item--active">
+              <!-- <a href="index.html">главная</a> -->
+              <a href="#">главная</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="catalog.html">каталог продукции</a>
+              <!-- <a>каталог продукции</a> -->
+            </li>
+            <li class="nav-list__item">
+              <a href="form.html">подбор программы</a>
+              <!-- <a>подбор программы</a> -->
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Интернет-магазин функционального питания для
-        ваших любимых котиков</h1>
+      <h1 class="visually-hidden">Интернет-магазин функционального питания для ваших любимых котиков
+      </h1>
       <section class="health-program">
-        <div class="health-program__wrapper">
-          <h2 class="visually-hidden">Подобрать программу здоровья</h2>
-          <header class="health-program__header">
-            <h2 class="health-program__title">Функциональное питание для котов
-            </h2>
-            <p class="health-program__slogan">Занялся собой? Займись котом!</p>
-            <img src="blocks/health-program/img/index_can_mobile.png"
-                 alt="Кэт-энерджи с курицей для вашего кота" width="280"
-                 height="270">
-          </header>
-          <a class="health-program__link button" href="form.html">Подобрать
-            программу</a>
+        <!-- <div class="health-program__wrapper"> -->
+        <h2 class="visually-hidden">Подобрать программу здоровья</h2>
+        <header class="health-program__header">
+          <div class=" health-program__back">
+            <div class="wrapper">
+              <h2 class="health-program__title">Функциональное питание для котов
+              </h2>
+              <p class="health-program__slogan">Занялся собой? Займись котом!</p>
+              <img src="../img/index-can-mobile@1x.png" alt="Кэт-энерджи с курицей для вашего кота" width="280" height="271">
+            </div>
+          </div>
+          <a class="health-program__link button wrapper" href="form.html">Подобрать программу</a>
+        </header>
+
+        <div class="wrapper">
           <ul class="health-program__list">
             <li class="health-program__item health-program-item">
-              <h3 class="health-program-item__title">Похудение</h3>
-              <p class="health-program-item__description">
-                Ваш кот весит больше собаки и почти утратил способность лазить
-                по
-                деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
-                сбросить лишний вес.
-              </p>
-              <a class="health-program-item__link"
-                 href="catalog.html#slim">Каталог Slim</a>
+
+              <h3 class="health-program-item__title program-icon program-icon--slim">Похудение</h3>
+              <p class="health-program-item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
+                лишний вес.</p>
+              <a class="health-program-item__link" href="catalog.html">Каталог Slim</a>
             </li>
             <li class="health-program__item health-program-item">
-              <h3 class="health-program-item__title">Набор массы</h3>
+              <h3 class="health-program-item__title program-icon program-icon--pro">Набор массы</h3>
               <p class="health-program-item__description">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые
                 мышцы!
               </p>
-              <a class="health-program-item__link"
-                 href="catalog.html#pro">Каталог
-                pro</a>
+              <a class="health-program-item__link" href="catalog.html">Каталог pro</a>
             </li>
           </ul>
         </div>
       </section>
 
       <section class="advantages">
-        <div class="advantages__wrapper">
+        <div class="advantages__wrapper wrapper">
           <h2 class="advantages__title">Как это работает</h2>
           <ul class="advantages__list">
-            <li class="advantages__item">
+            <li class="advantages__item advantages-icon advantages-icon--leaf">
               Функциональное питание содержит только полезные питательные
               вещества.
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item advantages-icon advantages-icon--powder">
               Выпускается в виде порошка, который нужно лишь залить кипятком и
               готово.
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item advantages-icon  advantages-icon--dining">
               Замените один-два приема обычной еды на наше функциональное
               питание.
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item advantages-icon  advantages-icon--clock">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего
               питомца!
             </li>
@@ -120,8 +101,7 @@
       </section>
 
       <section class="example">
-        <div class="example__wrapper">
-
+        <div class="wrapper">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
@@ -132,27 +112,23 @@
 
           <div class="example__keypoints keypoints">
             <div class="keypoints__wrapper">
-              <div class="keypoints__item">
-                <span>5 кг</span>
-                <span>снижение веса</span>
+              <div class="keypoints__item keypoints__item--border">
+                <span class="keypoints__value">5 кг</span>
+                <span class="keypoints__option">снижение веса</span>
               </div>
 
-              <div class="example__item">
-                <span>60 дней</span>
-                <span>затрачено времени</span>
+              <div class="keypoints__item keypoints__item--border">
+                <span class="keypoints__value">60 дней</span>
+                <span class="keypoints__option">затрачено времени</span>
               </div>
             </div>
           </div>
-          <div class="example__item">
-            <span>Затраты на питание: 15 000 руб.</span>
+          <div class="keypoints__item">
+            <span class="keypoints__value-option">Затраты на питание: 15 000 руб.</span>
           </div>
-
           <div class="example__slider slider">
             <div class="slider__photocards">
-              <img class="slider__photo"
-                   src="blocks/example/img/before_mobile.png"
-                   alt="Кот до начала программы оздоровления" width="311"
-                   height="232">
+              <img class="slider__photo" src="../img/before-mobile@1x.png" alt="Кот до начала программы оздоровления" width="311" height="232">
               <!-- <img class="example-slider__photo"
                  src="blocks/example/img/after_mobile.png"
                  alt="Кот по окончании программы оздоровления" width="251"
@@ -163,74 +139,66 @@
               <button class="slider__toggle" type="button">Стало</button>
             </p>
           </div>
-
         </div>
       </section>
-
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <section class="page-footer__contacts contacts">
+      <section class="page-footer__contacts contacts">
+        <div class="wrapper">
           <h2 class="visually-hidden">Как нас найти</h2>
           <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
-            Санкт-Петербург</p>
-          <div class="contacts__maps">
-            <h2 class="visually-hidden">Как до нас добраться - карта</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253056438!2d30.320853351292428!3d59.93871916896568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1573567411114!5m2!1sru!2sru"
-                    width="320" height="400" style="border: 0;"
-                    allowfullscreen=""></iframe>
-          </div>
-        </section>
-
-        <!--  На главной должен быть линк на верх страницы?
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map">
+          <div class="contacts__img"></div>
+          <h2 class="visually-hidden">Как до нас добраться - карта</h2>
+          <!-- <iframe class="contacts__mapframe"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253056438!2d30.320853351292428!3d59.93871916896568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1573567411114!5m2!1sru!2sru"
+                  width="320" height="400" style="border: 0;" allowfullscreen=""></iframe> -->
+          <iframe class="contacts__mapframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A3291e2963d38dc5ad0f2d796d8de413f085cf1fd282d6e04bf5ac540c03fadf9&amp;source=constructor" width="320"
+                  height="400" style="border: 0;"></iframe>
+        </div>
+      </section>
+      <!--  На главной должен быть линк на верх страницы?
           На других страницах ссылка на главную? -->
-        <a class="page-footer__link logo-link" href="#">
-          <img class="logo-link__image"
-               src="blocks/logo/img/logo_mobile_header.svg"
-               alt="Интернет-магазин фитнес еды для котиков" width="101"
-               height="18">
-        </a>
+      <section class="page-footer__links">
+        <h2 class="visually-hidden">Как с нами связаться</h2>
+        <div class="wrapper">
+          <a class="page-footer__logo" href="#">
+            <img class="logo-link__image" src="../img/logo-footer.svg" alt="Интернет-магазин фитнес еды для котиков" width="129" height="25">
+          </a>
+          <ul class="page-footer__social social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">VK</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Instagram</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <ul class="page-footer__social social">
-          <li class="social__item">
-            <a class="social__link social__link--vk"
-               href="https://vk.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">VK</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--insta"
-               href="https://instagram.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Instagram</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb"
-               href="https://facebook.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Facebook</span>
-            </a>
-          </li>
-        </ul>
-
-        <p class="main-footer__copyright copyright">
+      <!--TODO Проверить скрин-ридером -->
+      <address class="page-footer__copyright copyright wrapper">
+        <!-- <section class="page-footer__copyright copyright wrapper"> -->
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт разработчика">
           <span class="copyright__title">HTML Academy</span>
-          <a class="copyright__link"
-             href="https://htmlacademy.ru/intensive/adaptive"
-             aria-label="Посетите сайт разработчика">
-          </a>
-
-          <!-- Проверить скрин-ридером -->
-          <a class="copyright__link"
-             href="https://htmlacademy.ru/intensive/adaptive"
-             aria-label="Посетите сайт веб-разработчика">
-            <!-- Здесь будет SVG элемент -->
-            <img src="blocks/copyright/img/htmlacademy.svg"
-                 alt="Лого HTML академии" width="27" height="34">
-          </a>
-        </p>
-      </div>
+        </a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт веб-разработчика">
+          <!-- TODO изменить цвет иконки в редакторе -->
+          <img src="../img/htmlacademy.svg" alt="Лого HTML академии" width="27" height="34">
+        </a>
+      </address>
     </footer>
   </body>
 
